Fixed Window Size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>DrumKit App</title>
         <link rel="stylesheet" href="style.css">
         <script src="app.js" defer></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     </head>
     <body>
         <img src="background.jpg">
